--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Feedback.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Feedback.cshtml
@@ -172,7 +172,7 @@
                     { "data": "universityId" },
                     { "data": "subject" },
                     { "data": "message" },
-                    { "data": "id", "render": function(data) {
+                    { "data": "EmployeeId", "render": function(data) {
                             return "<a class='btn btn-default btn-sm' onclick=PopupForm('@Url.Action("AddOrEdit", "Comment")/" +
                                 data +
                                 "')><i class='fa fa-pencil'></i> Edit</a><a class='btn btn-danger btn-sm' style='margin-left:5px' onclick=Delete(" +
