--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Teachers.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Teachers.cshtml
@@ -9,6 +9,7 @@
     Layout = "/Views/Shared/_LayoutDashboard.cshtml";
 
 }
+@*<script src="~/Scripts/jquery-1.12.4.min.js"></script>*@
 
 <div class="main-panel">
     <nav class="navbar navbar-default navbar-fixed">
@@ -75,37 +76,6 @@
                         </div>
                         <div class="content table-responsive table-full-width" id="teachers">
 
-                            @*<table class="table table-hover table-striped">
-                                    <thead>
-                                    <th>ID</th>
-                                    <th>Name</th>
-                                    <th>Averange Mark</th>
-                                    <th>Email</th>
-                                    <th>Type Teacher</th>
-                                    <th>University</th>
-                                    </thead>
-                                    <tbody>
-                                   @foreach (var teacher in Model.TeacherShows)
-                                    {
-                                        <tr>
-                                            <td>@($"{teacher.Id}")</td>
-                                            <td>@($"{teacher.FirstName} {teacher.LastName}")</td>
-                                            <td>@($"{teacher.AverangeMarks}")</td>
-                                            <td>@($"{teacher.Email}")</td>
-                                            <td>@($"{teacher.TypeTeacher}")</td>
-                                            <td>
-                                                @foreach (var university in teacher.Universities)
-                                                {
-                                                    @($"{university} ")
-                                                }
-                                            </td>
-                                        </tr>
-                                    }
-
-                                    </tbody>
-                                </table>*@
-
-
                             <table class="table table-hover table-striped">
                                 <thead>
                                 <th>ID</th>
@@ -115,49 +85,32 @@
                                 <th>Type Teacher</th>
                                 <th>University</th>
                                 </thead>
-                                <tbody>
-                                    @foreach (var teacher in Model.TeacherShows)
-                                    {
-                                        <tr>
-                                            <td>@($"{teacher.Id}")</td>
-                                            <td>@($"{teacher.FirstName} {teacher.LastName}")</td>
-                                            <td>@($"{teacher.AverageMarks}")</td>
-                                            <td>@($"{teacher.Email}")</td>
-                                            <td>@($"{teacher.TypeTeacher}")</td>
-                                            <td>
-                                                @foreach (var university in teacher.Universities)
-                                                {
-                                                    @($"{university} ")
-                                                }
-                                            </td>
-                                        </tr>
-
-                                    }
+                                <tbody id="resultsTable">
+                                @foreach (TeacherShowViewModel teacher in Model.TeacherShows)
+                                {
+                                    <tr>
+                                        <td>@($"{teacher.Id}")</td>
+                                        <td>@($"{teacher.FirstName} {teacher.LastName}")</td>
+                                        <td>@($"{teacher.AverageMarks}")</td>
+                                        <td>@($"{teacher.Email}")</td>
+                                        <td>@($"{teacher.TypeTeacher}")</td>
+                                        <td>
+                                            @foreach (string university in teacher.Universities)
+                                            {
+                                                @($"{university} ")
+                                            }
+                                        </td>
+                                    </tr>
+                                }
 
                                 </tbody>
                             </table>
-                            @if (Model.PageViewModel.HasPreviousPage)
-                            {
-                                <a asp-action="Index"
-                                   asp-route-page="@(Model.PageViewModel.PageNumber - 1)"
-                                   class="btn btn-default btn">
-                                    <i class="glyphicon glyphicon-chevron-left"></i>
-                                    Preview
-                                </a>
-                            }
-                            @if (Model.PageViewModel.HasNextPage)
-                            {
-                                <a asp-action="Index"
-                                   asp-route-page="@(Model.PageViewModel.PageNumber + 1)"
-                                   class="btn btn-default btn">
-                                    <i class="glyphicon glyphicon-chevron-right"></i>
-                                    Next
-                                </a>
-                            }
-
                         </div>
+                        
                         <div>
-                            <button id="moreTeachers">button</button>
+                            <a class="btn btn-success" id="moreTeachers" style="margin-bottom: 10px">
+                                <i class="fa fa-plus"></i> Show More Teachers
+                            </a>
                         </div>
 
                     </div>
@@ -168,48 +121,42 @@
     </div>
 </div>
 
+@section Scripts{
+    <script>
+        $(document).ready(() => {
 
-<script>
-    var pageNumber = 0;
-    $("#moreTeachers").click(function () {
-        pageNumber++;
-        $.ajax({
-            url: "/Home/Teachers",
-            type: "GET",
-            data: ({ page: pageNumber }),
-            datatype: "application/json",
-            success: function (data) {
+            var pageNumber = 1;
+            $("#moreTeachers").click(function () {
+                pageNumber++;
+                $.ajax({
+                    url: "/Home/MoreTeachers",
+                    type: "GET",
+                    data: ({ page: pageNumber }),
+                    datatype: "application/json",
+                    success: function (data) {
 
-                $("#moreTeachers").empty();
+                        if (data.length < 5) {
+                            $("#moreTeachers").hide();
+                        }
 
-                if (data.length < 10) {
-                    $("#moreTeachers").hide();
-                }
-
-                $.each(data,
-                    function (item) {
-                        $('#teachers').append
-                        (
-                            "<td>" +
-                            item.Id +
-                            "</td>" +
-                            "<td>" +
-                            item.FirstName +
-                            item.LastName +
-                            "</td>" +
-                            "<td>" +
-                            item.AverageMarks +
-                            "</td>" +
-                            "<td>" +
-                            item.Email +
-                            "</td>" +
-                            "<td>" +
-                            item.TypeTeacher +
-                            "</td>"
-                        );
-                    });
-            }
+                        $.each(data,
+                            function (i, item) {
+                                $('#resultsTable').append
+                                    (
+                                    "<tr>" +
+                                        "<td>" + item.Id + "</td>" +
+                                        "<td>" + item.FirstName + item.LastName + "</td>" +
+                                        "<td>" + item.AverageMarks + "</td>" +
+                                        "<td>" + item.Email + "</td>" +
+                                        "<td>" + item.TypeTeacher + "</td>" +
+                                        "<td>" + $.each(item.Universities, function(index, value) { value }) + "</td>" +
+                                    "</tr>"
+                                    );
+                            });
+                    }
+                });
+            });
         });
-    });
 
-</script>
+    </script>
+}
