--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_Layout.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_Layout.cshtml
@@ -109,7 +109,7 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Home" asp-action="Universities">Universities</a>
+                    <a class="nav-link" style="color: white" asp-controller="Home" asp-action="Universities">Universities</a>
                     @*</li>
                         <li class="nav-item">
                             <a class="nav-link" href="#features">Features</a>
@@ -121,7 +121,7 @@
                             <a class="nav-link" href="#clients">Clients</a>
                         </li>*@
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" style="color: white" href="#contact">Contact</a>
                 </li>
                 @*<li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -143,10 +143,10 @@
                 {
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/Identity/Account/Login">Login</a>
+                        <a class="nav-link" style="color: white" href="/Identity/Account/Login">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Identity/Account/Register">Register</a>
+                        <a class="nav-link" style="color: white" href="/Identity/Account/Register">Register</a>
                     </li>
                 }
 
