--- a/3/Form/Form/Views/Shared/_Layout.cshtml
+++ b/3/Form/Form/Views/Shared/_Layout.cshtml
@@ -37,6 +37,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TagHelper">TagHelper</a>
                         </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Crud" asp-action="AddForm">CrudAjax</a>
+                        </li>
 
                     </ul>
                 </div>
