--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Teachers.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Teachers.cshtml
@@ -124,7 +124,6 @@
 @section Scripts{
     <script>
         $(document).ready(() => {
-
             var pageNumber = 1;
             $("#moreTeachers").click(function () {
                 pageNumber++;
@@ -132,7 +131,7 @@
                     url: "/Home/MoreTeachers",
                     type: "GET",
                     data: ({ page: pageNumber }),
-                    datatype: "application/json",
+                    dataype: "application/json",
                     success: function (data) {
 
                         if (data.length < 5) {
