--- a/3/Form/Form/Views/Home/Index.cshtml
+++ b/3/Form/Form/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 <form method="post" action="/Home/Form/">
     <div>
-        <label>Name</label>
+        <label >Name</label>
         <input type="text" name="Name" required maxlength="10" minlength="2" />
     </div>
 
@@ -42,6 +42,9 @@
         <input type="checkbox" name="Sex" required />
     </div>
 
+    <div>
+        <input type="submit" value="Save" />
+    </div>
     <div>
         <input type="submit" value="Save" />
     </div>
