--- a/3/Form/Form/Views/Crud/AddForm.cshtml
+++ b/3/Form/Form/Views/Crud/AddForm.cshtml
@@ -8,68 +8,69 @@
 
 
 <form id="form">
-    <div class="validation" asp-validation-summary="ModelOnly"></div>
+    <div class="validation" asp-validation-summary="All"></div>
 
     <div>
         <label asp-for="Name"></label>
-        <input asp-for="Name" type="text" maxlength="10" minlength="2" required />
+        <input asp-for="Name" />
         <span asp-validation-for="Name"></span>
     </div>
 
     <div>
         <label asp-for="Age"></label>
         <input asp-for="Age" type="number" min="1" max="100" />
+        <span asp-validation-for="Age"></span>
     </div>
 
     <div>
         <label asp-for="Date"></label>
         <input asp-for="Date" type="date" required />
+        <span asp-validation-for="Date"></span>
     </div>
 
     <div>
         <label asp-for="Tel"></label>
         <input asp-for="Tel" , type="tel" required />
+        <span asp-validation-for="Tel"></span>
     </div>
 
     <div>
         <label asp-for="Password"></label>
         <input asp-for="Password" type="password" , required />
+        <span asp-validation-for="Password"></span>
     </div>
 
     <div>
         <label asp-for="Email"></label>
         <input asp-for="Email" type="email" required />
+        <span asp-validation-for="Email"></span>
     </div>
-
-    <div>
-        <label asp-for="Sex"></label>
-        <input asp-for="Sex" type="checkbox" required />
-    </div>
-
 
     <div>
         <input type="submit" value="Save" id="save" />
     </div>
 </form>
 
-<table class="table table-hover table-striped" >
+
+
+
+<table class="table table-hover table-striped">
+
     <thead>
-    <tr>
-
-    <th>Name</th>
-    <th>Age</th>
-    <th>Date Mark</th>
-    <th>Tel</th>
-    <th>Password</th>
-    <th>Email</th>
-    <th>Sex</th>
-    </tr>
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+        </tr>
     </thead>
-    <tbody id="resultsTable">
-    </tbody>
 
+    <tbody id="resultsTable">
+        <tr>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+    </tbody>
 </table>
-   
+
 <div>
     <a class="btn btn-success" id="moreTables" style="margin-bottom: 10px">
         ShowMoreTables
@@ -77,20 +78,20 @@
 </div>
 
 
-<div >
+<div>
     <div id="editContents" style="text-align:center; padding:10px; bottom: 1px; z-index: 3; position: fixed; align-self: center;">
         <button class="btn btn-primary btn-lg btn-custom" id="editExpenseModalButton">Edit</button>
         <button class="btn btn-primary btn-lg btn-danger" data-toggle="modal" data-target="#deleteExpenseModal">Delete</button>
     </div>
     <table id="table" class="table-responsive header-fixed table-striped" data-toggle="table">
         <thead style="">
-        <tr>
-            <th>Details</th>
-            <th>Date</th>
-            <th>Value</th>
-            <th>Account</th>
-            <th>Category</th>
-        </tr>
+            <tr>
+                <th>Details</th>
+                <th>Date</th>
+                <th>Value</th>
+                <th>Account</th>
+                <th>Category</th>
+            </tr>
         </thead>
         <tbody></tbody>
     </table>
@@ -99,11 +100,11 @@
 
 
 @section Scripts
-{
+    {
     <script>
         $(document).ready(() => {
             $("#form").on("submit",
-                function(e) {
+                function (e) {
                     e.preventDefault(),
                         $.ajax({
                             type: "POST",
@@ -119,31 +120,30 @@
                             url: "/Crud/AddForm",
                             dataType: 'json',
                             contentType: 'application/json',
-                            success: function(response) {
+                            success: function (response) {
                                 alert("it ok");
                             }
                         });
                 });
         });
-
     </script>
 
     <script>
         $(document).ready(() => {
             var viewId = 1;
-            $('#moreTables').click(function() {
+            $('#moreTables').click(function () {
                 $.ajax({
                     url: "/Crud/MoreTables",
                     type: "GET",
                     data: ({ id: viewId }),
                     contentType: "application/json; charset=utf-8",
                     dataType: "json",
-                    success: function(data) {
+                    success: function (data) {
                         console.log(data);
                         $.each(data,
-                            function(i, item) {
+                            function (i, item) {
                                 $('#resultsTable').append
-                                (
+                                    (
                                     "<tr>" +
                                     "<td>" + item.Name + "</td>" +
                                     "<td>" + item.Age + "</td>" +
@@ -153,63 +153,26 @@
                                     "<td>" + item.Email + "</td>" +
                                     "<td>" + item.Sex + "</td>" +
                                     "</tr>"
-                                );
+                                    );
                             });
 
-//                        $.each(data,
-//                            function(i, item) {
-//                                console.log(item);
-//                                $('<tr>').append(
-//                                    $('<td>').text(item.Name),
-//                                    $('<td>').text(item.Age),
-//                                    $('<td>').text(item.Date),
-//                                    $('<td>').text(item.Tel),
-//                                    $('<td>').text(item.Password),
-//                                    $('<td>').text(item.Email),
-//                                    $('<td>').text(item.Sex)
-//                                ).appendTo('#resultsTable');
-//                            }
-//                        );
                     }
                 });
             });
         });
 
     </script>
-    
+
     <script>
         function deleteExpense() {
             $('#deleteExpenseModal').modal('toggle');
-            $('#editContents').hide();
             $.ajax({
                 type: "DELETE",
                 url: "/Main/deleteExpense?id=" + $('table > tbody > tr.active').attr('id'),
                 dataType: 'json',
                 contentType: 'application/json',
                 success: function (response) {
-                    if (response.success) {
-                        $('#notificationText').append(response.responseText);
-                        $('#notification').show();
-                        setTimeout(() => {
-                            $('#notificationText').html("");
-                            $('#notification').hide();
-                        }, 5000);
-                        $('#table > tbody').html("");
-                        pagenr = -1;
-                        getTen().then(() => {
-                            if (pagenr != -1)
-                                getTen();
-                        });
-                    } else {
-                        $('#notificationText').append(response.responseText);
-                        $('#notification').prop("style", "background-color:#fe5461");
-                        $('#notification').show();
-                        setTimeout(() => {
-                            $('#notificationText').html("");
-                            $('#notification').removeAttr("style");
-                            $('#notification').hide();
-                        }, 5000);
-                    }
+                    alert("success!");
                 },
                 error: function (response) {
                     alert("error!");
