--- a/3/Form/Form/Views/Home/Index.cshtml
+++ b/3/Form/Form/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
 
 <form method="post" action="/Home/Form/">
     <div>
-        <label >Name</label>
-        <input type="text" name="Name" required maxlength="10" minlength="2" />
+        <label>Name</label>
+        <input type="text" for="Name" required maxlength="10" minlength="2" />
     </div>
 
     <div>
@@ -45,10 +45,5 @@
     <div>
         <input type="submit" value="Save" />
     </div>
-    <div>
-        <input type="submit" value="Save" />
-    </div>
-</form>
 
-<h2>first h1</h2>
-<h2>second h2</h2>
+</form>
