--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Universities.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Universities.cshtml
@@ -38,7 +38,7 @@
                 <ul class="nav navbar-nav navbar-right">
                    @if (SignInManager.IsSignedIn(User))
                     {
-                        <li>
+                        <li class="nav-item">
                             <button type="submit" class="nav-link btn btn-link text-dark">
                                 <a asp-controller="Home" asp-action="User">Account</a>
                             </button>
