--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Areas/Identity/Pages/Account/Login.cshtml
@@ -83,8 +83,6 @@
 <!DOCTYPE html>
 <html>
 
-
-
 <head>
     <title>Login V18</title>
     <meta charset="UTF-8">
@@ -119,42 +117,39 @@
         <div class="container-login100">
             <div class="wrap-login100">
                 <form class="login100-form validate-form" id="account" method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
                     <span class="login100-form-title p-b-43">
                         Login to continue
                     </span>
 
-
                     <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input100" type="text" asp-for="Input.Email">
+                        <input class="input100" type="text" asp-for="Input.Email" placeholder="Login">
                         <span class="focus-input100" asp-for="Input.Email"></span>
-                        <span class="label-input100" asp-for="Input.Email">Email</span>
                     </div>
 
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" type="password" asp-for="Input.Password">
+                        <input class="input100" type="password" asp-for="Input.Password" placeholder="Password">
                         <span class="focus-input100" asp-for="Input.Password"></span>
-                        <span class="label-input100" asp-for="Input.Password">Password</span>
                     </div>
 
                     <div class="flex-sb-m w-full p-t-3 p-b-32">
                         <div class="contact100-form-checkbox">
-                            <input class="input-checkbox100" id="ckb1" type="checkbox">
-                            <label class="label-checkbox100" for="ckb1">
+                            <input class="input-checkbox100" id="ckb1" type="checkbox" asp-for="Input.RememberMe">
+                            <label class="label-checkbox100" for="ckb1" asp-for="Input.RememberMe">
                                 Remember me
                             </label>
                         </div>
 
                         <div>
-                            <a href="#" class="txt1">
-                                Forgot Password?
+                            <a href="/Identity/Account/Register" class="txt1">
+                                Register ?
                             </a>
                         </div>
                     </div>
 
-
                     <div class="container-login100-form-btn">
-                        <button class="login100-form-btn"  type="submit">
+                        <button class="login100-form-btn" type="submit">
                             Login
                         </button>
                     </div>
@@ -182,10 +177,6 @@
         </div>
     </div>
 
-
-
-
-
     <!--===============================================================================================-->
     <script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
@@ -204,10 +195,3 @@
     <script src="/js/main.js"></script>
 
 </body>
-
-
-
-
-@*@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}*@
