--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Areas/Identity/Pages/Account/Register.cshtml
@@ -70,48 +70,25 @@
 
     <div class="limiter">
         <div class="container-login100">
-            <div class="wrap-login100"  asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                <form class="login100-form validate-form" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            <div class="wrap-login100" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                <form class="login100-form validate-form" asp-route-returnUrl="@Model.ReturnUrl" method="post" data-ajax="true" data-ajax-method="post" data-ajax-complete="completed">
+                    <div asp-validation-summary="All" class="text-danger"></div>
                     <span class="login100-form-title p-b-43">
                         Register to continue
                     </span>
 
-
                     <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input100" asp-for="Input.Email">
-                        <span class="focus-input100" asp-for="Input.Email"></span>
-                        <span class="label-input100" asp-for="Input.Email">Email</span>
+                        <input class="input100" asp-for="Input.Email" placeholder="Email">
                     </div>
 
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" asp-for="Input.Password">
-                        <span class="focus-input100" asp-for="Input.Password"></span>
-                        <span class="label-input100" asp-validation-for="Input.Password">Password</span>
+                        <input class="input100" asp-for="Input.Password" placeholder="Password">
                     </div>
-
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" asp-for="Input.ConfirmPassword">
-                        <span class="focus-input100" asp-for="Input.ConfirmPassword"></span>
-                        <span class="label-input100" asp-validation-for="Input.ConfirmPassword">Repeat Password</span>
+                        <input class="input100" asp-for="Input.ConfirmPassword" placeholder="Confirm Password">
                     </div>
-
-                    <div class="flex-sb-m w-full p-t-3 p-b-32">
-                        <div class="contact100-form-checkbox">
-                            <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                            <label class="label-checkbox100" for="ckb1">
-                                Remember me
-                            </label>
-                        </div>
-
-                        <div>
-                            <a href="#" class="txt1">
-                                Forgot Password?
-                            </a>
-                        </div>
-                    </div>
-
 
                     <div class="container-login100-form-btn">
                         <button class="login100-form-btn" type="submit">
@@ -167,5 +144,15 @@
 
 
 @*@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}*@
+        <partial name="_ValidationScriptsPartial" />
+    }*@
+
+
+@section scripts{
+    <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
+    <script>
+        completed = function (xhr) {
+            alert(`Hi ${xhr.responseText}!`);
+        };
+    </script>
+}
