--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/User.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/User.cshtml
@@ -127,27 +127,17 @@
                             <div class="content">
                                 <div class="author">
                                     <a href="#">
-                                        <img class="avatar border-gray" src="/img/cristian.PNG" alt="..." />
+                                        <img class="avatar border-gray" src="/img/profile.png" alt="..." />
 
                                         <h4 class="title">
-                                            Anghelenici Cristian<br />
-                                            <small>cristi123</small>
+                                            @(User.Identity.Name)<br />
                                         </h4>
                                     </a>
                                 </div>
-                                <p class="description text-center">
-                                    "Lamborghini Mercy <br>
-                                    Your chick she so thirsty <br>
-                                    I'm in that two seat Lambo"
-                                </p>
-                            </div>
-                            <hr>
-                            <div class="text-center">
-                                <button href="#" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button>
-                                <button href="#" class="btn btn-simple"><i class="fa fa-twitter"></i></button>
-                                <button href="#" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button>
 
                             </div>
+                            <hr>
+                          
                         </div>
                     </div>
                 </div>
