--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
@@ -20,33 +20,21 @@
     <meta name="viewport" content="width=device-width" />
 
     <environment include="Development">
-        <!-- Bootstrap core CSS     -->
         <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
-
-        <!-- Animation library for notifications   -->
         <link href="/assets/css/animate.min.css" rel="stylesheet" />
-
-        <!--  Light Bootstrap Table core CSS    -->
         <link href="/assets/css/light-bootstrap-dashboard.css?v=1.4.0" rel="stylesheet" />
-
-
-        <!--  CSS for Demo Purpose, don't include it in your project     -->
         <link href="/assets/css/demo.css" rel="stylesheet" />
 
-
-        <!--     Fonts and icons     -->
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="//fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" type="text/css">
         <link href="/assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
         
-        @* ------------- *@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>@ViewBag.Title - My ASP.NET Application</title>
         <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
         <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
-        @* ------------- *@
     </environment>
 
 </head>
@@ -54,20 +42,12 @@
 <body>
 
     <div class="wrapper">
-        @*<div class="sidebar" data-color="dark" data-image="/assets/img/sidebar-5.jpg">*@
         <div class="sidebar caption" data-color="dark" data-image="/img/computers.png">
-
-            <!--
-
-            Tip 1: you can change the color of the sidebar using: data-color="blue | azure | green | orange | red | purple"
-            Tip 2: you can also add an image using data-image tag
-
-            -->
 
             <div class="sidebar-wrapper" >
                 <div class="logo">
                     <a asp-controller="Home" asp-action="Index" class="simple-text">
-                        University Rating
+                        <img src="/img/logo7db2.png" height="50">
                     </a>
                 </div>
 
@@ -141,33 +121,20 @@
         <script src="/Scripts/jquery-ui-1.12.1.min.js"></script>
 
 
-        <!--   Core JS Files   -->
         <script src="/assets/js/jquery.3.2.1.min.js" type="text/javascript"></script>
         <script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
-
-        <!--  Charts Plugin -->
         <script src="/assets/js/chartist.min.js"></script>
-
-        <!--  Notifications Plugin    -->
         <script src="/assets/js/bootstrap-notify.js"></script>
-
-        <!--  Google Maps Plugin    -->
         <script type="/text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-
-        <!-- Light Bootstrap Table Core javascript and methods for Demo purpose -->
         <script src="/assets/js/light-bootstrap-dashboard.js?v=1.4.0"></script>
-
-        <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
         <script src="/assets/js/demo.js"></script>
     
-        @* --------------------------- *@
         <script src="~/Scripts/jquery-1.12.4.min.js"></script>
         <script src="~/Scripts/bootstrap.min.js"></script>
         <script src="~/Scripts/jquery.validate.min.js"></script>
         <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
         <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
         <script src="~/Scripts/notify.min.js"></script>
-        @* --------------------------- *@
     </environment>
 
     @RenderSection("Scripts", required: false)
@@ -181,5 +148,4 @@
             $(this).closest('li').addClass('active');
         });
     </script>
-
 }
