--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Teachers.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Teachers.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using UniversityRating.Data.Core.DomainModels.Identity
 @using UniversityRating.Presentation.Models.Teacher
+@using UniversityRating.Presentation.Models.University
 @model UniversityRating.Presentation.Models.Home.IndexViewModel
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
@@ -12,58 +13,6 @@
 @*<script src="~/Scripts/jquery-1.12.4.min.js"></script>*@
 
 <div class="main-panel">
-    <nav class="navbar navbar-default navbar-fixed">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Teacher</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-left">
-
-                    <li>
-                        <a href="">
-                            <i class="fa fa-search"></i>
-                            <p class="hidden-lg hidden-md">Search</p>
-                        </a>
-                    </li>
-                </ul>
-
-                <ul class="nav navbar-nav navbar-right">
-                    @if (SignInManager.IsSignedIn(User))
-                    {
-                        <li>
-                            <button type="submit" class="nav-link btn btn-link text-dark">
-                                <a asp-controller="Home" asp-action="User">Account</a>
-                            </button>
-                        </li>
-
-                        <li>
-                            <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-                            </form>
-                        </li>
-
-                    }
-                    else
-                    {
-                        <li>
-                            <a asp-area="Identity" asp-page="/Account/Register">Register</a>
-
-                        </li>
-                        <li>
-                            <a asp-area="Identity" asp-page="/Account/Login">Login</a>
-                        </li>
-                    }
-                </ul>
-            </div>
-        </div>
-    </nav>
 
     <div class="content">
         <div class="container-fluid">
@@ -73,40 +22,51 @@
                         <div class="header">
                             <h4 class="title">List of Teachers</h4>
                             <p class="category">Teachers of university in Moldova</p>
+
+                            <select name="Universities" class="form-control" id="universities" style="width: 240px">
+                                @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
+                                {
+                                    <option title="@university.Description" value="@university.Id">@university.Name</option>
+                                }
+                            </select>
+
                         </div>
+
                         <div class="content table-responsive table-full-width" id="teachers">
 
                             <table class="table table-hover table-striped">
                                 <thead>
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Averange Mark</th>
-                                <th>Email</th>
-                                <th>Type Teacher</th>
-                                <th>University</th>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Name</th>
+                                        <th>Averange Mark</th>
+                                        <th>Email</th>
+                                        <th>Type Teacher</th>
+                                        <th>University</th>
+                                    </tr>
                                 </thead>
                                 <tbody id="resultsTable">
-                                @foreach (TeacherShowViewModel teacher in Model.TeacherShows)
-                                {
-                                    <tr>
-                                        <td>@($"{teacher.Id}")</td>
-                                        <td>@($"{teacher.FirstName} {teacher.LastName}")</td>
-                                        <td>@($"{teacher.AverageMarks}")</td>
-                                        <td>@($"{teacher.Email}")</td>
-                                        <td>@($"{teacher.TypeTeacher}")</td>
-                                        <td>
-                                            @foreach (string university in teacher.Universities)
-                                            {
-                                                @($"{university} ")
-                                            }
-                                        </td>
-                                    </tr>
-                                }
+                                    @foreach (TeacherShowViewModel teacher in Model.TeacherShows)
+                                    {
+                                        <tr>
+                                            <td>@($"{teacher.Id}")</td>
+                                            <td>@($"{teacher.FirstName} {teacher.LastName}")</td>
+                                            <td>@($"{teacher.AverageMarks}")</td>
+                                            <td>@($"{teacher.Email}")</td>
+                                            <td>@($"{teacher.TypeTeacher}")</td>
+                                            <td>
+                                                @foreach (string university in teacher.Universities)
+                                                {
+                                                    @($"{university} ")
+                                                }
+                                            </td>
+                                        </tr>
+                                    }
 
                                 </tbody>
                             </table>
                         </div>
-                        
+
                         <div>
                             <a class="btn btn-success" id="moreTeachers" style="margin-bottom: 10px">
                                 <i class="fa fa-plus"></i> Show More Teachers
@@ -143,12 +103,12 @@
                                 $('#resultsTable').append
                                     (
                                     "<tr>" +
-                                        "<td>" + item.Id + "</td>" +
-                                        "<td>" + item.FirstName + item.LastName + "</td>" +
-                                        "<td>" + item.AverageMarks + "</td>" +
-                                        "<td>" + item.Email + "</td>" +
-                                        "<td>" + item.TypeTeacher + "</td>" +
-                                        "<td>" + $.each(item.Universities, function(index, value) { value }) + "</td>" +
+                                    "<td>" + item.Id + "</td>" +
+                                    "<td>" + item.FirstName + item.LastName + "</td>" +
+                                    "<td>" + item.AverageMarks + "</td>" +
+                                    "<td>" + item.Email + "</td>" +
+                                    "<td>" + item.TypeTeacher + "</td>" +
+                                    "<td>" + $.each(item.Universities, function (index, value) { value }) + "</td>" +
                                     "</tr>"
                                     );
                             });
@@ -158,4 +118,6 @@
         });
 
     </script>
+
+
 }
