--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
@@ -20,38 +20,88 @@
     <meta name="viewport" content="width=device-width" />
 
     <environment include="Development">
-        <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="/assets/css/animate.min.css" rel="stylesheet" />
-        <link href="/assets/css/light-bootstrap-dashboard.css?v=1.4.0" rel="stylesheet" />
-        <link href="/assets/css/demo.css" rel="stylesheet" />
+
+        <link href="/assets/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="/assets/css/animate.min.css" rel="stylesheet"/>
+        <link href="/assets/css/light-bootstrap-dashboard.css?v=1.4.0" rel="stylesheet"/>
+        <link href="/assets/css/demo.css" rel="stylesheet"/>
 
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="//fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" type="text/css">
-        <link href="/assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
-        
-        <meta charset="utf-8" />
+        <link href="/assets/css/pe-icon-7-stroke.css" rel="stylesheet"/>
+
+        <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>@ViewBag.Title - My ASP.NET Application</title>
-        <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-        <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+        <link href="~/Content/Site.css" rel="stylesheet" type="text/css"/>
+        <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet"/>
+
     </environment>
 
 </head>
 
 <body>
 
+
+    <div class="main-panel">
+        <nav class="navbar navbar-default navbar-fixed">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div class="collapse navbar-collapse">
+
+                        <ul class="nav navbar-nav navbar-right">
+                           @if (SignInManager.IsSignedIn(User))
+                            {
+                                <li class="nav-item">
+                                    <button type="submit" class="nav-link btn btn-link text-dark">
+                                        <a asp-controller="Home" asp-action="User">Account</a>
+                                    </button>
+                                </li>
+
+                                <li>
+                                    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                                        <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                                    </form>
+                                </li>
+
+                            }
+                            else
+                            {
+                                <li >
+                                    <a asp-area="Identity" asp-page="/Account/Register">Register</a>
+
+                                </li>
+                                <li >
+                                    <a asp-area="Identity" asp-page="/Account/Login">Login</a>
+                                </li>
+                            }
+                        </ul>
+
+                    </div>
+                </div>
+            </nav>
+
+    </div>
+
     <div class="wrapper">
         <div class="sidebar caption" data-color="dark" data-image="/img/computers.png">
 
-            <div class="sidebar-wrapper" >
+            <div class="sidebar-wrapper">
                 <div class="logo">
                     <a asp-controller="Home" asp-action="Index" class="simple-text">
                         <img src="/img/logo7db2.png" height="50">
                     </a>
                 </div>
 
-                <ul class="nav" >
+                <ul class="nav">
                     <li class="nav-item">
                         <a asp-controller="Home" asp-action="Universities">
                             <i class="pe-7s-graph"></i>
@@ -128,13 +178,14 @@
         <script type="/text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
         <script src="/assets/js/light-bootstrap-dashboard.js?v=1.4.0"></script>
         <script src="/assets/js/demo.js"></script>
-    
+
         <script src="~/Scripts/jquery-1.12.4.min.js"></script>
         <script src="~/Scripts/bootstrap.min.js"></script>
         <script src="~/Scripts/jquery.validate.min.js"></script>
         <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
         <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
         <script src="~/Scripts/notify.min.js"></script>
+
     </environment>
 
     @RenderSection("Scripts", required: false)
