--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_Layout.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link" style="color: white" asp-controller="Home" asp-action="Universities">Universities</a>
+                    <a class="nav-link" style="color: white" asp-controller="University" asp-action="Index">Universities</a>
                 </li>
 
                 <li class="nav-item">
