--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
@@ -103,23 +103,30 @@
 
                 <ul class="nav">
                     <li class="nav-item">
-                        <a asp-controller="Home" asp-action="Universities">
+                        <a asp-controller="University" asp-action="Index">
                             <i class="pe-7s-graph"></i>
                             <p>Universities</p>
                         </a>
                     </li>
 
                     <li class="ach">
-                        <a asp-controller="Home" asp-action="Teachers">
+                        <a asp-controller="Teacher" asp-action="Index">
                             <i class="pe-7s-note2"></i>
                             <p>Teachers</p>
                         </a>
                     </li>
 
                     <li class="ach">
-                        <a asp-controller="Home" asp-action="Specialties">
+                        <a asp-controller="Course" asp-action="Index">
                             <i class="pe-7s-science"></i>
                             <p>Specialties</p>
+                        </a>
+                    </li>
+
+                    <li class="ach">
+                        <a asp-controller="Mark" asp-action="Index">
+                            <i class="pe-7s-like2"></i>
+                            <p>Add Mark</p>
                         </a>
                     </li>
 
